test/functions/deitz/compilerErrorOnSetter.good
compilerErrorOnSetter.chpl:8: error: foo() used in value context!
